removed -q from the pytest call in tox.toml so we can see the tests running (-q = quiet)

--- a/tox.toml
+++ b/tox.toml
@@ -4,4 +4,4 @@ env_list = ["py313-pytest"]
 
 [env.py313-pytest]
 deps = ["-rrequirements.txt"]
-commands = [["python", "-m", "pytest", "-q"]]
+commands = [["python", "-m", "pytest"]]
